--- a/frontend-cemos/public/assets/content/politica/1-ciencia-politica/4.md
+++ b/frontend-cemos/public/assets/content/politica/1-ciencia-politica/4.md
@@ -16,11 +16,11 @@ Desse modo, há um ou vários fins associados ao Estado que lhe são próprios, 
 
 Aristóteles em sua obra Política afirma que a finalidade do Estado é a felicidade na vida. “A cidade é uma reunião de famílias e pequenos burgos que se associam para desfrutarem juntos uma existência inteiramente feliz e independente”. No entanto, para ele, bem viver “é viver venturoso e com virtude. É necessário, portanto, admitir em princípio que as ações honestas e virtuosas, e não apenas a vida comum, são a finalidade da sociedade política”.
 
-Num dos mais importantes documentos do processo constitucional norte-americano, The Federalist papers, publicado em 1788, seus autores declaram que “a segurança e a felicidade da sociedade são os fins a que aspiram todas a instituições políticas e aos quais todas estas instituições devem sacrificar-se”.? Assim, “um bom governo implica duas coisas: primeiro, fidelidade a seu objeto, que é a felicidade do povo; segundo, um conhecimento dos meios que permitam alcançar melhor este objeto”.
+Num dos mais importantes documentos do processo constitucional norte-americano, The Federalist papers, publicado em 1788, seus autores declaram que “a segurança e a felicidade da sociedade são os fins a que aspiram todas a instituições políticas e aos quais todas estas instituições devem sacrificar-se”. Assim, “um bom governo implica duas coisas: primeiro, fidelidade a seu objeto, que é a felicidade do povo; segundo, um conhecimento dos meios que permitam alcançar melhor este objeto”.
 
 O Estado possui, pelo menos, um fim jurídico bastante claro, que é garantir ou proteger o direito. Kelsen, neste sentido, afirma que o Estado é que torna possível a “verdadeira liberdade”, pois ao se admitir “que a liberdade não é mais que a expressão da legalidade normativa do valor ou do espírito, diferentemente e em consciente contraposição com a legalidade causal da legalidade natural, pode-se afirmar que o Estado não somente trata de realizar esta liberdade, mas que ele é a liberdade, pois ele é a lei jurídica”.
 
-Podemos afirmar que o fim próprio, objetivo e necessário do Estado é o “bem comum”. A elaboração do conceito de “bem comum?” tem origem na teologia católica, em particular com Santo Tomás de Aquino (1227-1274) e de acordo com essa origem constitui um status no qual se alcança a satisfação de todos os desejos da comunidade e seus membros. Em síntese, o “bem comum” não é o bem de todos — como se “todos” fosse uma unidade real —, mas o conjunto de condições apropriadas para que todos — “grupos intermediários” e pessoas individuais — alcancem seu “bem particular”. Por isso, podemos afirmar que não há contradição entre o “bem comum” e os “bens particulares”.
+Podemos afirmar que o fim próprio, objetivo e necessário do Estado é o “bem comum”. A elaboração do conceito de “bem comum” tem origem na teologia católica, em particular com Santo Tomás de Aquino (1227-1274) e de acordo com essa origem constitui um status no qual se alcança a satisfação de todos os desejos da comunidade e seus membros. Em síntese, o “bem comum” não é o bem de todos — como se “todos” fosse uma unidade real —, mas o conjunto de condições apropriadas para que todos — “grupos intermediários” e pessoas individuais — alcancem seu “bem particular”. Por isso, podemos afirmar que não há contradição entre o “bem comum” e os “bens particulares”.
 
 **Pág 91**
 
@@ -32,7 +32,7 @@ Em resumo, podemos distinguir entre o fim objetivo do Estado — que é próprio
 
 ## 4.2 Os principais elementos do Estado
 
-A estrutura do Estado se compõe basicamente de três elementos essenciais de acordo com vários autores (Jellinek, Burdeau, Heller, Fischbach):º o território, o povo e o poder. O território e a população constituem a base material do Estado. O território constitui um dos grandes fatores de unidade e sem ele não há Estado. Na base da estrutura territorial do Estado estão o território, o povo e as instituições. O Estado tem inúmeras funções, como organizar a administração da sociedade utilizando para tanto de um pessoal especializado (a burocracia), exercer a dominação política e estabelecer uma série de instituições que reproduzem o sistema e garantem as condições de sua permanência.
+A estrutura do Estado se compõe basicamente de três elementos essenciais de acordo com vários autores (Jellinek, Burdeau, Heller, Fischbach) o território, o povo e o poder. O território e a população constituem a base material do Estado. O território constitui um dos grandes fatores de unidade e sem ele não há Estado. Na base da estrutura territorial do Estado estão o território, o povo e as instituições. O Estado tem inúmeras funções, como organizar a administração da sociedade utilizando para tanto de um pessoal especializado (a burocracia), exercer a dominação política e estabelecer uma série de instituições que reproduzem o sistema e garantem as condições de sua permanência.
 
 **Pág 92**
 
@@ -78,9 +78,9 @@ O conceito de povo, por outro lado, faz referência ao conjunto de pessoas que f
 
 O conceito de povo é uma categoria jurídica que determina a relação entre o indivíduo e o Estado; assim o povo compreende as pessoas submetidas ao poder do Estado ligadas a este por um vínculo de cidadania; portanto, não estão incluídos no conceito os estrangeiros e aqueles que não têm uma relação jurídica de cidadania.
 
-A diferença específica que caracteriza o povo “é dada pela sua atribuição ao Estado, representando este um conceito antes jurídico que sociológico; o povo compreende apenas aqueles indivíduos sujeitos à soberania do Estado, a ele ligados pelo vínculo da cidadania, vivendo tanto em seu território quanto no exterior”. Em consequência não são considerados como cidadãos os estrangeiros, os apátridas etc.!!
+A diferença específica que caracteriza o povo “é dada pela sua atribuição ao Estado, representando este um conceito antes jurídico que sociológico; o povo compreende apenas aqueles indivíduos sujeitos à soberania do Estado, a ele ligados pelo vínculo da cidadania, vivendo tanto em seu território quanto no exterior”. Em consequência não são considerados como cidadãos os estrangeiros, os apátridas etc.
 
-O povo é, também, um conjunto de pessoas, mas que participa de uma comunidade política enquanto constitui uma unidade cultural e histórica. O povo não constitui, por si só, o Estado, “porque este, trazendo a sua razão de ser do passado, projeta-se nos séculos para conseguir os seus fins imanentes e superiores aos indivíduos e cumprir assim sua missão histórica”. O Estado “vive acima da vida dos indivíduos e, mais que no passado, vive no presente e no porvir, numa continuidade de relações e trabalhos”.!2
+O povo é, também, um conjunto de pessoas, mas que participa de uma comunidade política enquanto constitui uma unidade cultural e histórica. O povo não constitui, por si só, o Estado, “porque este, trazendo a sua razão de ser do passado, projeta-se nos séculos para conseguir os seus fins imanentes e superiores aos indivíduos e cumprir assim sua missão histórica”. O Estado “vive acima da vida dos indivíduos e, mais que no passado, vive no presente e no porvir, numa continuidade de relações e trabalhos”.
 
 Para Jellinek, “o povo, em sua qualidade subjetiva, forma, devido à unidade do Estado, uma corporação, isto é: todos os seus indivíduos estão unidos, entrelaçados entre si, enquanto sujeitos do Estado: são membros deste, que é portanto, ao mesmo tempo, associação de autoridade e associação corporativa”. Ambos os elementos, autoridade e associação corporativa, se encontram unidos na corporação estatal. “A causa da autoridade do poder do Estado, é o povo objeto do imperium, e se encontra nesse ponto de vista, em uma mera subordinação; mas como os indivíduos, em sua qualidade de elementos do Estado, se encontram em uma situação de membros e são, portanto, sujeitos.” Em síntese: os indivíduos, enquanto objetos do poder do Estado, são sujeitos de deveres; enquanto membros do Estado, pelo contrário, são sujeitos de direito.
 
@@ -112,7 +112,7 @@ A partir da intensificação da globalização da economia nas últimas décadas
 
 ## 4.8 O conceito de nação
 
-De um ponto de vista sociológico, definimos povo como “agrupamentos humanos com cultura semelhante — língua, religião, tradições etc. — implicando certa homogeneidade e desenvolvimento de fortes laços de solidariedade entre si. Assim, podemos falar em povo judeu, cigano, armênio, curdo, xavante ou brasileiro”. E a Nação é a denominação de um povo ao se fixar numa determinada área geográfica e adquirir certo grau de organização político-administrativa, mantendo-se unido por uma história e cultura comuns e pela consciência de que constituem uma unidade cultural.!
+De um ponto de vista sociológico, definimos povo como “agrupamentos humanos com cultura semelhante — língua, religião, tradições etc. — implicando certa homogeneidade e desenvolvimento de fortes laços de solidariedade entre si. Assim, podemos falar em povo judeu, cigano, armênio, curdo, xavante ou brasileiro”. E a Nação é a denominação de um povo ao se fixar numa determinada área geográfica e adquirir certo grau de organização político-administrativa, mantendo-se unido por uma história e cultura comuns e pela consciência de que constituem uma unidade cultural.
 
 Uma nação, portanto, aspiraria a desfrutar de uma organização política própria, quer seja na forma de um Estado soberano (uninacional), como a Argentina ou o Brasil, ou integrado em um espaço político autônomo dentro de uma organização estatal plurinacional, como, por exemplo, o Estado espanhol que integra as nações basca e catalã em seu território, as quais do ponto de vista político-jurídico são espanholas.
 
@@ -384,7 +384,7 @@ Concluindo, o fator mais importante na consolidação democrática não é a soc
 
 Em resumo, a sociedade civil pode jogar um importante papel na construção e consolidação da democracia, mantendo sua autonomia e não se alienando em relação ao Estado. Quanto mais a sociedade civil for ativa, pluralista, com recursos, institucionalizada e democrática, e mais efetiva na relação com o Estado — com crítica, colaboração, afastamento, aproximação etc. —, mais se estará consolidando a democracia.
 
-## 4.14 Identidade e Estado-nação na América Latina*?
+## 4.14 Identidade e Estado-nação na América Latina
 
 Durante o século XX, o Estado-nação, com fronteiras claramente definidas e aceitas pela comunidade internacional, foi a entidade política dominante. As guerras foram travadas tendo como objetivo mudarem-se as fronteiras políticas ou obter-se o controle de um outro sistema político. A soberania do Estado-nação foi sempre, desde seu surgimento, mais importante que os grupos culturais que se encontravam dentro de suas fronteiras. Mesmo no período de apogeu das ideologias, as disputas eram entre nações com posições ideológicas diferentes (países nazistas versus países aliados, ou países comunistas versus capitalistas).
 
@@ -406,7 +406,7 @@ No mundo globalizado, os membros de culturas dispersas mantêm-se em contato e r
 
 Podemos desenvolver um raciocínio, aparentemente paradoxal, de que as diversas formas culturais de vida que existiram — de certa forma oprimidas pelo Estado-nação — necessitam deste mesmo Estado no atual momento de globalização para manterem uma coexistência democrática com outras culturas, num mesmo espaço político.
 
-O crescimento de teorias que enfatizam a necessidade do fim do Estado (ou a proximidade deste mesmo fim) e buscam formas novas de articulação política transnacional — vide Habermas —,º2 incorrem provavelmente no erro de desprezarem a importância do Estado-nação para a manutenção de um mínimo de convivência democrática entre diferentes culturas. Essa ideia, de que diferentes grupos (étnicos, culturais etc.) para conviverem necessitam do Estado, é assemelhada com a proposta por Hobbes no Leviatã, onde o poder político desempenha o papel de garantidor da ordem num território, onde as diferenças poderiam inviabilizar a convivência harmoniosa.
+O crescimento de teorias que enfatizam a necessidade do fim do Estado (ou a proximidade deste mesmo fim) e buscam formas novas de articulação política transnacional — vide Habermas —, incorrem provavelmente no erro de desprezarem a importância do Estado-nação para a manutenção de um mínimo de convivência democrática entre diferentes culturas. Essa ideia, de que diferentes grupos (étnicos, culturais etc.) para conviverem necessitam do Estado, é assemelhada com a proposta por Hobbes no Leviatã, onde o poder político desempenha o papel de garantidor da ordem num território, onde as diferenças poderiam inviabilizar a convivência harmoniosa.
 
 O aceleramento do processo de desvalorização do Estado pode nos colocar num limbo intermediário entre o Estado-nação atual e uma futura realidade transnacional inacabada (ou mal construída) que poderia ser aproveitada por formas culturais de vida negadoras da convivência democrática com outras culturas, repetindo-se deste modo, em outro patamar, a situação vivida na Alemanha e na Itália na primeira metade do século passado (que resultou na ascensão de doutrinas fascistas).
 
