--- a/frontend-cemos/public/assets/content/politica/6-decreto-12481/1.md
+++ b/frontend-cemos/public/assets/content/politica/6-decreto-12481/1.md
@@ -4,171 +4,169 @@ Institui a Política Marítima Nacional.
 
 ## CAPÍTULO I  - DISPOSIÇÕES GERAIS
 
-     Art. 1º Fica instituída a Política Marítima Nacional - PMN, a ser implementada de forma articulada pelos órgãos e pelas entidades da administração pública federal, direta e indireta, respeitadas as competências estadual, distrital e municipal.
+⚖️ **Art. 1º** Fica instituída a Política Marítima Nacional - PMN, a ser implementada de **forma articulada pelos órgãos e pelas entidades da administração pública federal, direta e indireta**, respeitadas as competências estadual, distrital e municipal.
 
-     Parágrafo único. A União orientará os entes federativos para que considerem a PMN em seus planejamentos e suas ações.
+Parágrafo único. A União orientará os entes federativos para que **considerem a PMN em seus planejamentos e suas ações**.
 
-     Art. 2º A PMN abrange as atividades relacionadas ao uso:
+⚖️ **Art. 2º** A PMN abrange as atividades relacionadas ao uso:
 
-     I - do mar, do leito e do subsolo marinhos contidos na extensão atlântica que se projeta a partir do litoral até o limite exterior da plataforma continental brasileira;
+✨ I - do mar, do leito e do subsolo marinhos contidos na extensão atlântica que se projeta a partir do litoral até o limite exterior da plataforma continental brasileira;
 
-     II - das ilhas costeiras e oceânicas;
+✨ II - das ilhas costeiras e oceânicas;
 
-     III - das águas interiores, conforme previsto no art. 3º, caput, inciso I, da Lei nº 9.966, de 28 de abril de 2000; e
+✨ III - das águas interiores, conforme previsto no art. 3º, caput, inciso I, da Lei nº 9.966, de 28 de abril de 2000; e
 
-     IV - de outras áreas marítimas e marinhas de interesse nacional.
+✨ IV - de outras áreas marítimas e marinhas de interesse nacional.
 
-     Art. 3º Para fins do disposto neste Decreto considera-se: 
+⚖️ **Art. 3º** Para fins do disposto neste Decreto considera-se: 
 
-     I - Amazônia Azul - espaço marítimo do País, compreendidos o mar, o leito e o subsolo marinhos, na extensão atlântica que se projeta a partir do litoral até o limite exterior da plataforma continental brasileira;
+✨ I - **Amazônia Azul** - espaço marítimo do País, compreendidos o mar, o leito e o subsolo marinhos, na extensão atlântica que se projeta a partir do litoral até o limite exterior da plataforma continental brasileira;
 
-     II - consciência situacional marítima - compreensão de fato ou circunstância associada aos ambientes marinho, marítimo e fluviolacustre que seja relevante para a segurança marítima, a economia ou a proteção do meio ambiente;
+✨ II - **consciência situacional marítima** - compreensão de fato ou circunstância associada aos ambientes marinho, marítimo e fluviolacustre que seja relevante para a segurança marítima, a economia ou a proteção do meio ambiente;
 
-     III - economia azul - práticas que visem à exploração responsável e equilibrada dos oceanos, com ênfase na conservação da biodiversidade e dos serviços ecossistêmicos, na sustentabilidade e na justiça social, garantidos a preservação dos oceanos, o
-desenvolvimento econômico e a distribuição justa dos benefícios para as comunidades costeiras e dependentes dos recursos marinhos;
+✨ III - **economia azul** - práticas que visem à exploração responsável e equilibrada dos oceanos, com ênfase na conservação da biodiversidade e dos serviços ecossistêmicos, na sustentabilidade e na justiça social, garantidos a preservação dos oceanos, o desenvolvimento econômico e a distribuição justa dos benefícios para as comunidades costeiras e dependentes dos recursos marinhos;
 
-     IV - fluviolacustre - aquilo que se origina ou esteja junto às águas interiores, de origem natural ou antrópica;
+✨ IV - **fluviolacustre** - aquilo que se origina ou esteja junto às águas interiores, de origem natural ou antrópica;
 
-     V - marinho - aquilo que tem origem no mar, que pertence ao ecossistema do mar, ou que serve à navegação no mar;
+✨ V - **marinho** - aquilo que tem origem no mar, que pertence ao ecossistema do mar, ou que serve à navegação no mar;
 
-     VI - marítimo - aquilo que está junto ao mar, que nele é posto pelo ser humano ou que esse realiza no mar;
+✨ VI - **marítimo** - aquilo que está junto ao mar, que nele é posto pelo ser humano ou que esse realiza no mar;
 
-     VII - mentalidade marítima - modo de pensar sobre a importância do mar e das águas interiores para a vida dos brasileiros e para o desenvolvimento nacional;
+✨ VII - **mentalidade marítima** - modo de pensar sobre a importância do mar e das águas interiores para a vida dos brasileiros e para o desenvolvimento nacional;
 
-     VIII - poder marítimo - recursos de que dispõe o Estado para a utilização do mar e das águas interiores como instrumento de ação política e militar e como fator de desenvolvimento econômico, tecnológico e social;
+✨ VIII - **poder marítimo** - recursos de que dispõe o Estado para a utilização do mar e das águas interiores como instrumento de ação política e militar e como fator de desenvolvimento econômico, tecnológico e social;
 
-     IX - poder naval - parte integrante do poder marítimo capacitada a atuar militarmente no mar, em águas interiores e em áreas terrestres de interesse para as operações navais, incluído o espaço aéreo sobrejacente;
+✨ IX - **poder naval** - parte integrante do poder marítimo capacitada a atuar militarmente no mar, em águas interiores e em áreas terrestres de interesse para as operações navais, incluído o espaço aéreo sobrejacente;
 
-     X - proteção marítima - conjunto de operações destinadas à fiscalização do cumprimento de leis e regulamentos, e à prevenção e à repressão de atos ilícitos ou ameaças no mar, nas águas interiores, na Amazônia Azul e em outras áreas marítimas de interesse nacional; e
+✨ X - **proteção marítima** - conjunto de operações destinadas à fiscalização do cumprimento de leis e regulamentos, e à prevenção e à repressão de atos ilícitos ou ameaças no mar, nas águas interiores, na Amazônia Azul e em outras áreas marítimas de interesse nacional; e
 
-     XI - embarcação de bandeira brasileira - embarcação inscrita no Registro de Propriedade Marítima brasileiro ou no Registro Especial Brasileiro.
+✨ XI - **embarcação de bandeira brasileira** - embarcação inscrita no Registro de Propriedade Marítima brasileiro ou no Registro Especial Brasileiro.
 
 ## CAPÍTULO II - DOS PRINCÍPIOS, DOS OBJETIVOS E DAS ORIENTAÇÕES ESTRATÉGICAS
 
-     Art. 4º São princípios da PMN:
+⚖️ **Art. 4º** São princípios da PMN:
 
-     I - a defesa da soberania do Estado brasileiro, especialmente sobre os recursos existentes na zona econômica exclusiva e na plataforma continental brasileiras;
+✨ I - a defesa da soberania do Estado brasileiro, especialmente sobre os recursos existentes na zona econômica exclusiva e na plataforma continental brasileiras;
 
-     II - a garantia da segurança no mar e nas águas interiores;
+✨ II - a garantia da segurança no mar e nas águas interiores;
 
-     III - o desenvolvimento sustentável, com vistas ao bem-estar humano e à conservação dos serviços ecossistêmicos;
+✨ III - o desenvolvimento sustentável, com vistas ao bem-estar humano e à conservação dos serviços ecossistêmicos;
 
-     IV - o respeito aos compromissos internacionais assumidos pelo País;
+✨ IV - o respeito aos compromissos internacionais assumidos pelo País;
 
-     V - o incentivo à cooperação internacional para o uso pacífico do mar, especialmente no Atlântico Sul;
+✨ V - o incentivo à cooperação internacional para o uso pacífico do mar, especialmente no Atlântico Sul;
 
-     VI - a cooperação entre entidades públicas e privadas para o desenvolvimento da economia azul;
+✨ VI - a cooperação entre entidades públicas e privadas para o desenvolvimento da economia azul;
 
-     VII - o estímulo ao fortalecimento do registro de embarcações e trabalhadores no País para atuação no transporte aquaviário;
+✨ VII - o estímulo ao fortalecimento do registro de embarcações e trabalhadores no País para atuação no transporte aquaviário;
 
-     VIII - o estímulo ao emprego e à qualificação da mão de obra brasileira, com respeito à igualdade de gênero, e ao enfrentamento a todas as formas de discriminação e de violência; e
+✨ VIII - o estímulo ao emprego e à qualificação da mão de obra brasileira, com respeito à igualdade de gênero, e ao enfrentamento a todas as formas de discriminação e de violência; e
 
-     IX - a garantia de uso dos recursos naturais aquáticos de forma equilibrada pelos pescadores.
+✨ IX - a garantia de uso dos recursos naturais aquáticos de forma equilibrada pelos pescadores.
 
-     Art. 5º São objetivos da PMN:
+⚖️ **Art. 5º** São objetivos da PMN:
 
-     I - assegurar o exercício da soberania brasileira e coibir atos ilícitos e ameaças nos espaços previstos no art. 2º, conforme as seguintes orientações estratégicas:
+✨ I - assegurar o exercício da soberania brasileira e coibir atos ilícitos e ameaças nos espaços previstos no art. 2º, conforme as seguintes orientações estratégicas:
 
-	a) 	desenvolvimento contínuo das instituições civis e militares destinadas à proteção marítima, incluídas sua integração e sua cooperação;
-	b) 	aprimoramento das capacidades necessárias ao Sistema Nacional de Mobilização, de que trata a Lei nº 11.631, de 27 de dezembro de 2007;
-	c) 	desenvolvimento da infraestrutura necessária nas ilhas oceânicas;
-	d) 	promoção da cooperação internacional com vistas à proteção marítima, à prevenção, à reação e à repressão de atos ilícitos e outras ameaças; e
-	e) 	aperfeiçoamento da proteção das infraestruturas críticas, observado o disposto no Anexo ao Decreto nº 10.569, de 9 de dezembro de 2020;
+a) 	desenvolvimento contínuo das instituições civis e militares destinadas à proteção marítima, incluídas sua integração e sua cooperação;
+b) 	aprimoramento das capacidades necessárias ao Sistema Nacional de Mobilização, de que trata a Lei nº 11.631, de 27 de dezembro de 2007;
+c) 	desenvolvimento da infraestrutura necessária nas ilhas oceânicas;
+d) 	promoção da cooperação internacional com vistas à proteção marítima, à prevenção, à reação e à repressão de atos ilícitos e outras ameaças; e
+e) 	aperfeiçoamento da proteção das infraestruturas críticas, observado o disposto no Anexo ao Decreto nº 10.569, de 9 de dezembro de 2020;
 
-     II - fortalecer a posição do País como ator marítimo influente no cenário internacional, em particular no Atlântico Sul, conforme as seguintes orientações estratégicas:
+✨ II - fortalecer a posição do País como ator marítimo influente no cenário internacional, em particular no Atlântico Sul, conforme as seguintes orientações estratégicas:
 
-	a) 	estímulo à presença nacional em áreas marítimas de interesse, de acordo com a Política Nacional de Defesa e as diretrizes da política externa brasileira;
-	b) 	atuação proativa nacional em organismos e foros internacionais relacionados a temas marítimos, marinhos e fluviolacustres;
-	c) 	fortalecimento da cooperação em proveito da segurança marítima, em especial com os estados lindeiros do Atlântico Sul;
-	d) 	ampliação do engajamento do País em atividades polares, especialmente na Antártica, na forma do disposto no Decreto nº 11.096, de 15 de junho de 2022; e
-	e) 	promoção da Zona de Paz e Cooperação do Atlântico Sul, instituída por meio da Resolução nº 41/11, da Assembleia Geral da Organização das Nações Unidas, de 27 de outubro de 1986;
+a) 	estímulo à presença nacional em áreas marítimas de interesse, de acordo com a Política Nacional de Defesa e as diretrizes da política externa brasileira;
+b) 	atuação proativa nacional em organismos e foros internacionais relacionados a temas marítimos, marinhos e fluviolacustres;
+c) 	fortalecimento da cooperação em proveito da segurança marítima, em especial com os estados lindeiros do Atlântico Sul;
+d) 	ampliação do engajamento do País em atividades polares, especialmente na Antártica, na forma do disposto no Decreto nº 11.096, de 15 de junho de 2022; e
+e) 	promoção da Zona de Paz e Cooperação do Atlântico Sul, instituída por meio da Resolução nº 41/11, da Assembleia Geral da Organização das Nações Unidas, de 27 de outubro de 1986;
 
-     III - incrementar a segurança marítima nos espaços previstos no art. 2º, conforme as seguintes orientações estratégicas:
+✨ III - incrementar a segurança marítima nos espaços previstos no art. 2º, conforme as seguintes orientações estratégicas:
 
-	a) 	aperfeiçoamento de sistemas, capacidades e infraestruturas responsáveis pela defesa, pela operação e pela segurança do tráfego aquaviário, incluídos os auxílios à navegação e à geoinformação marinha e fluviolacustre;
-	b) 	aprimoramento e integração de informações de navegação e de serviços relacionados à proteção marítima, à segurança do tráfego aquaviário e à conservação dos ambientes marinho e fluviolacustre;
-	c) 	incremento de medidas para prevenção, resposta e adaptação, mitigação e reparação de desastres ambientais, efeitos das mudanças do clima ou atividades humanas que venham a impactar negativamente nos ambientes marinho, costeiro e fluviolacustre;
-	d) 	estímulo às medidas de controle e de redução da geração de resíduos sólidos e das emissões de poluentes pelo transporte aquaviário; e
-	e) 	fortalecimento da consciência situacional marítima;
+a) 	aperfeiçoamento de sistemas, capacidades e infraestruturas responsáveis pela defesa, pela operação e pela segurança do tráfego aquaviário, incluídos os auxílios à navegação e à geoinformação marinha e fluviolacustre;
+b) 	aprimoramento e integração de informações de navegação e de serviços relacionados à proteção marítima, à segurança do tráfego aquaviário e à conservação dos ambientes marinho e fluviolacustre;
+c) 	incremento de medidas para prevenção, resposta e adaptação, mitigação e reparação de desastres ambientais, efeitos das mudanças do clima ou atividades humanas que venham a impactar negativamente nos ambientes marinho, costeiro e fluviolacustre;
+d) 	estímulo às medidas de controle e de redução da geração de resíduos sólidos e das emissões de poluentes pelo transporte aquaviário; e
+e) 	fortalecimento da consciência situacional marítima;
 
-     IV - difundir e incentivar o conhecimento sobre a importância do mar, da zona costeira, dos ambientes fluviolacustres e da economia azul para o desenvolvimento nacional, com vistas a fortalecer a mentalidade marítima, conforme as seguintes orientações estratégicas:
+✨ IV - difundir e incentivar o conhecimento sobre a importância do mar, da zona costeira, dos ambientes fluviolacustres e da economia azul para o desenvolvimento nacional, com vistas a fortalecer a mentalidade marítima, conforme as seguintes orientações estratégicas:
 
-	a) 	difusão dos conceitos de Amazônia Azul e de economia azul;
-	b) 	incentivo à participação da sociedade nos temas relacionados à PMN e às ações dela decorrentes;
-	c) 	formação e aperfeiçoamento contínuo de recursos humanos para as atividades relacionadas aos ambientes marinho, costeiro e fluviolacustre; e
-	d) 	estímulo à inserção dos temas atinentes à PMN em todos os níveis educacionais para a formação de cidadãos críticos e conscientes da relevância dos ambientes marinhos, costeiros e fluviolacustres;
+a) 	difusão dos conceitos de Amazônia Azul e de economia azul;
+b) 	incentivo à participação da sociedade nos temas relacionados à PMN e às ações dela decorrentes;
+c) 	formação e aperfeiçoamento contínuo de recursos humanos para as atividades relacionadas aos ambientes marinho, costeiro e fluviolacustre; e
+d) 	estímulo à inserção dos temas atinentes à PMN em todos os níveis educacionais para a formação de cidadãos críticos e conscientes da relevância dos ambientes marinhos, costeiros e fluviolacustres;
 
-     V - estimular a competitividade da frota mercante com bandeira brasileira e a participação de mão de obra brasileira, inclusive da mulher, nas atividades desenvolvidas nos ambientes marinho, costeiro ou fluviolacustre, conforme as seguintes orientações estratégicas:
+✨ V - estimular a competitividade da frota mercante com bandeira brasileira e a participação de mão de obra brasileira, inclusive da mulher, nas atividades desenvolvidas nos ambientes marinho, costeiro ou fluviolacustre, conforme as seguintes orientações estratégicas:
 
-	a) 	desenvolvimento das estruturas aquaviária e portuária para que sejam eficientes, seguras, tecnologicamente inovadoras, ambientalmente sustentáveis, competitivas e integradas aos demais modais de transporte;
-	b) 	integração do transporte aquaviário nacional com os demais modais de transporte;
-	c) 	incentivo ao investimento privado e à otimização do emprego de recursos públicos na armação nacional;
-	d) 	estímulo à propriedade e ao registro de embarcações no País;
-	e) 	estímulo aos pescadores artesanais relativo aos usos múltiplos das águas; e
-	f) 	valorização e estímulo ao emprego de mão de obra brasileira e incentivo à inserção e à participação da mulher no desempenho das atividades desenvolvidas nos ambientes marinhos, costeiro e fluviolacustre;
+a) 	desenvolvimento das estruturas aquaviária e portuária para que sejam eficientes, seguras, tecnologicamente inovadoras, ambientalmente sustentáveis, competitivas e integradas aos demais modais de transporte;
+b) 	integração do transporte aquaviário nacional com os demais modais de transporte;
+c) 	incentivo ao investimento privado e à otimização do emprego de recursos públicos na armação nacional;
+d) 	estímulo à propriedade e ao registro de embarcações no País;
+e) 	estímulo aos pescadores artesanais relativo aos usos múltiplos das águas; e
+f) 	valorização e estímulo ao emprego de mão de obra brasileira e incentivo à inserção e à participação da mulher no desempenho das atividades desenvolvidas nos ambientes marinhos, costeiro e fluviolacustre;
 
-     VI - promover o parque industrial marítimo dos setores da construção, da manutenção, do reparo, da jumborização, da conversão, da modernização e do desmonte de embarcações e estruturas, conforme as seguintes orientações estratégicas:
+✨ VI - promover o parque industrial marítimo dos setores da construção, da manutenção, do reparo, da jumborização, da conversão, da modernização e do desmonte de embarcações e estruturas, conforme as seguintes orientações estratégicas:
 
-	a) 	incentivo à competitividade da indústria nacional de construção nas suas cadeias produtivas e nos serviços a elas relacionados;
-	b) 	incentivo à construção e à modernização de embarcações destinadas à pesca comercial e à indústria de processamento de pescado, respeitados os aspectos inerentes aos povos e às comunidades tradicionais marinhos e fluviolacustres; e
-	c) 	apoio à pesquisa, ao desenvolvimento, à inovação e à capacitação em tecnologias críticas ou sensíveis ao incremento e à competitividade do parque industrial nacional;
+a) 	incentivo à competitividade da indústria nacional de construção nas suas cadeias produtivas e nos serviços a elas relacionados;
+b) 	incentivo à construção e à modernização de embarcações destinadas à pesca comercial e à indústria de processamento de pescado, respeitados os aspectos inerentes aos povos e às comunidades tradicionais marinhos e fluviolacustres; e
+c) 	apoio à pesquisa, ao desenvolvimento, à inovação e à capacitação em tecnologias críticas ou sensíveis ao incremento e à competitividade do parque industrial nacional;
 
-     VII - estimular a pesquisa científica e tecnológica e a inovação, marinha e marítima, conforme as seguintes orientações estratégicas:
+✨ VII - estimular a pesquisa científica e tecnológica e a inovação, marinha e marítima, conforme as seguintes orientações estratégicas:
 
-	a) 	aprimoramento contínuo do ensino, por meio de cursos de extensão e de capacitação, dedicados aos estudos marítimos e marinhos;
-	b) 	difusão dos conhecimentos tradicional, científico, acadêmico e profissional relacionados às atividades desenvolvidas nos ambientes marinho, costeiro ou fluviolacustre e à segurança marítima;
-	c) 	integração e compartilhamento de dados e informações de pesquisas marítimas, marinhas e fluviolacustres;
-	d) 	incentivo à cooperação e ao intercâmbio científico nacional e internacional, relacionados às atividades de ciência, tecnologia e inovação marítimas, marinhas e fluviolacustre; e
-	e) 	estímulo à participação social e à integração entre os conhecimentos tradicional, científico e acadêmico, por meio de processos de ordenamento territorial sustentável;
+a) 	aprimoramento contínuo do ensino, por meio de cursos de extensão e de capacitação, dedicados aos estudos marítimos e marinhos;
+b) 	difusão dos conhecimentos tradicional, científico, acadêmico e profissional relacionados às atividades desenvolvidas nos ambientes marinho, costeiro ou fluviolacustre e à segurança marítima;
+c) 	integração e compartilhamento de dados e informações de pesquisas marítimas, marinhas e fluviolacustres;
+d) 	incentivo à cooperação e ao intercâmbio científico nacional e internacional, relacionados às atividades de ciência, tecnologia e inovação marítimas, marinhas e fluviolacustre; e
+e) 	estímulo à participação social e à integração entre os conhecimentos tradicional, científico e acadêmico, por meio de processos de ordenamento territorial sustentável;
 
-     VIII - incentivar a conservação e o uso sustentável da biodiversidade e dos ecossistemas marinhos, costeiros e fluviolacustres, conforme as seguintes orientações estratégicas:
+✨ VIII - incentivar a conservação e o uso sustentável da biodiversidade e dos ecossistemas marinhos, costeiros e fluviolacustres, conforme as seguintes orientações estratégicas:
 
-	a) 	fomento à adoção de medidas que contribuam para a promoção da saúde e da qualidade das águas interiores, da zona costeira e do ambiente marinho, incluídas ações de controle de poluentes, de despoluição do meio ambiente, para a conservação da biodiversidade marítima e a recuperação das espécies ameaçadas de extinção;
-	b) 	intensificação do monitoramento e da fiscalização da atividade pesqueira, especialmente em relação à pesca ilegal, não declarada ou não regulamentada;
-	c) 	controle, manejo e prevenção da introdução e da dispersão de espécies exóticas invasoras nos ambientes marinho, costeiro e fluviolacustre;
-	d) 	incentivo ao descomissionamento de estruturas marítimas ao término de seu ciclo de vida, com destinação final ambientalmente adequada, em atendimento aos princípios da reciclagem verde e da prevenção da poluição hídrica; e
-	e) 	estímulo à adoção de medidas necessárias à conservação da biodiversidade marinha e à recuperação das espécies ameaçadas de extinção;
+a) 	fomento à adoção de medidas que contribuam para a promoção da saúde e da qualidade das águas interiores, da zona costeira e do ambiente marinho, incluídas ações de controle de poluentes, de despoluição do meio ambiente, para a conservação da biodiversidade marítima e a recuperação das espécies ameaçadas de extinção;
+b) 	intensificação do monitoramento e da fiscalização da atividade pesqueira, especialmente em relação à pesca ilegal, não declarada ou não regulamentada;
+c) 	controle, manejo e prevenção da introdução e da dispersão de espécies exóticas invasoras nos ambientes marinho, costeiro e fluviolacustre;
+d) 	incentivo ao descomissionamento de estruturas marítimas ao término de seu ciclo de vida, com destinação final ambientalmente adequada, em atendimento aos princípios da reciclagem verde e da prevenção da poluição hídrica; e
+e) 	estímulo à adoção de medidas necessárias à conservação da biodiversidade marinha e à recuperação das espécies ameaçadas de extinção;
 
-     IX - promover a integração das ações para o aproveitamento econômico de recursos, vivos e não vivos, marinhos, costeiros e fluviolacustres, de forma compatível com os princípios do desenvolvimento sustentável, conforme as seguintes orientações estratégicas:
-	a) 	estímulo à formação de arranjos inovadores entre a sociedade, as instituições acadêmicas e o poder público, nos termos do disposto no Decreto nº 10.531, de 26 de outubro de 2020;
-	b) 	aperfeiçoamento contínuo do aproveitamento sustentável dos recursos vivos e naturais para geração de energias renováveis, e dos recursos não vivos marinhos, costeiros e fluviolacustres;
-	c) 	promoção das sustentabilidades ambiental, cultural, social e econômica nas atividades pesqueiras e aquícolas, observadas as peculiaridades da pesca artesanal, de subsistência e da aquicultura familiar;
-	d) 	estabelecimento de sistemática nacional de coleta, registro e disseminação de informações relacionadas à mensuração das atividades relativas à economia azul; e
-	e) 	estímulo ao planejamento e ao ordenamento do espaço marinho, observados os princípios nacionais e internacionais que orientem práticas de governança adequadas e sustentáveis, e o arcabouço jurídico brasileiro relacionado aos processos de ordenamento dos ambientes marinho, costeiro e fluviolacustre; e
+✨ IX - promover a integração das ações para o aproveitamento econômico de recursos, vivos e não vivos, marinhos, costeiros e fluviolacustres, de forma compatível com os princípios do desenvolvimento sustentável, conforme as seguintes orientações estratégicas:
+a) 	estímulo à formação de arranjos inovadores entre a sociedade, as instituições acadêmicas e o poder público, nos termos do disposto no Decreto nº 10.531, de 26 de outubro de 2020;
+b) 	aperfeiçoamento contínuo do aproveitamento sustentável dos recursos vivos e naturais para geração de energias renováveis, e dos recursos não vivos marinhos, costeiros e fluviolacustres;
+c) 	promoção das sustentabilidades ambiental, cultural, social e econômica nas atividades pesqueiras e aquícolas, observadas as peculiaridades da pesca artesanal, de subsistência e da aquicultura familiar;
+d) 	estabelecimento de sistemática nacional de coleta, registro e disseminação de informações relacionadas à mensuração das atividades relativas à economia azul; e
+e) 	estímulo ao planejamento e ao ordenamento do espaço marinho, observados os princípios nacionais e internacionais que orientem práticas de governança adequadas e sustentáveis, e o arcabouço jurídico brasileiro relacionado aos processos de ordenamento dos ambientes marinho, costeiro e fluviolacustre; e
 
-     X - promover atividades turísticas, sociais, esportivas, recreativas e culturais que valorizem o uso do mar e das águas interiores, de forma sustentável e associadas ao empreendedorismo e à empregabilidade, conforme as seguintes orientações estratégicas:
+✨ X - promover atividades turísticas, sociais, esportivas, recreativas e culturais que valorizem o uso do mar e das águas interiores, de forma sustentável e associadas ao empreendedorismo e à empregabilidade, conforme as seguintes orientações estratégicas:
 
-	a) 	estímulo ao planejamento e ao ordenamento territorial nas esferas federal, estadual, distrital e municipal, para apoiar as ações de caracterização e de gestão dos bens patrimoniais da União;
-	b) 	aperfeiçoamento contínuo do aproveitamento do mar e das águas interiores nos turismos náutico, ecológico, comunitário, de aventura, inclusive em unidades de conservação, observados os aspectos produtivos, socioambientais e as normas estabelecidas no plano de manejo da unidade;
-	c) 	adoção de medidas destinadas à implantação, à expansão, à modernização, à regularização e à fiscalização de infraestruturas e instalações de apoio à prática dos turismos náutico, aquático, esportivo e recreativo;
-	d) 	promoção do uso sustentável dos patrimônios natural, cultural, arqueológico e histórico subaquático;
-	e) 	desenvolvimento e valorização de práticas sustentáveis nas comunidades detentoras de bens culturais registrados como patrimônio cultural imaterial nacional;
-	f) 	estímulo à produção cultural associada ao mar e às águas interiores e sua divulgação; e
-	g) 	incentivo ao esporte, ao lazer e à prática de atividades físicas associadas ao mar e às águas interiores e sua divulgação.
+a) 	estímulo ao planejamento e ao ordenamento territorial nas esferas federal, estadual, distrital e municipal, para apoiar as ações de caracterização e de gestão dos bens patrimoniais da União;
+b) 	aperfeiçoamento contínuo do aproveitamento do mar e das águas interiores nos turismos náutico, ecológico, comunitário, de aventura, inclusive em unidades de conservação, observados os aspectos produtivos, socioambientais e as normas estabelecidas no plano de manejo da unidade;
+c) 	adoção de medidas destinadas à implantação, à expansão, à modernização, à regularização e à fiscalização de infraestruturas e instalações de apoio à prática dos turismos náutico, aquático, esportivo e recreativo;
+d) 	promoção do uso sustentável dos patrimônios natural, cultural, arqueológico e histórico subaquático;
+e) 	desenvolvimento e valorização de práticas sustentáveis nas comunidades detentoras de bens culturais registrados como patrimônio cultural imaterial nacional;
+f) 	estímulo à produção cultural associada ao mar e às águas interiores e sua divulgação; e
+g) 	incentivo ao esporte, ao lazer e à prática de atividades físicas associadas ao mar e às águas interiores e sua divulgação.
 
 ## CAPÍTULO III - DA IMPLEMENTAÇÃO E DA ARTICULAÇÃO COM OUTRAS POLÍTICAS
 
+⚖️ **Art. 6º** Na implementação da PMN pelos órgãos e pelas entidades da administração pública federal serão observadas:
 
-     Art. 6º Na implementação da PMN pelos órgãos e pelas entidades da administração pública federal serão observadas:
+✨ I - a concorrência e a racionalidade das atividades econômicas relacionadas ao uso do mar e às águas interiores;
 
-      I - a concorrência e a racionalidade das atividades econômicas relacionadas ao uso do mar e às águas interiores;
+✨ II - as melhores práticas regulatórias relacionadas ao uso do mar e às águas interiores;
 
-      II - as melhores práticas regulatórias relacionadas ao uso do mar e às águas interiores;
+✨ III - a previsibilidade e a segurança jurídica para a realização de investimentos e a expansão da economia do mar e das águas interiores;
 
-      III - a previsibilidade e a segurança jurídica para a realização de investimentos e a expansão da economia do mar e das águas interiores;
+✨ IV - a articulação interinstitucional para o aprimoramento do planejamento, da execução, do monitoramento e da avaliação das ações;
 
-      IV - a articulação interinstitucional para o aprimoramento do planejamento, da execução, do monitoramento e da avaliação das ações;
+✨ V - a compatibilização com as ações setoriais decorrentes de outras políticas públicas destinadas às atividades marítimas e marinhas;
 
-      V - a compatibilização com as ações setoriais decorrentes de outras políticas públicas destinadas às atividades marítimas e marinhas;
+✨ VI - a promoção da integração e da articulação entre a União, os Estados, o Distrito Federal e os Municípios de forma sistêmica, coordenada e associada, para estimular a participação da iniciativa privada; e
 
-      VI - a promoção da integração e da articulação entre a União, os Estados, o Distrito Federal e os Municípios de forma sistêmica, coordenada e associada, para estimular a participação da iniciativa privada; e
-
-      VII - a avaliação de cenários prospectivos e recepção de outras normas compatíveis que venham a ser posteriormente editadas.
+✨ VII - a avaliação de cenários prospectivos e recepção de outras normas compatíveis que venham a ser posteriormente editadas.
 
 ## CAPÍTULO IV - DISPOSIÇÕES FINAIS
 
-     Art. 7º O Ministro de Estado da Defesa poderá expedir atos complementares necessários à aplicação do disposto neste Decreto.
+⚖️ **Art. 7º** O Ministro de Estado da Defesa poderá expedir atos complementares necessários à aplicação do disposto neste Decreto.
 
-     Art. 8º Fica revogado o Decreto nº 1.265, de 11 de outubro de 1994.
+⚖️ **Art. 8º** Fica revogado o Decreto nº 1.265, de 11 de outubro de 1994.
 
-     Art. 9º Este Decreto entra em vigor na data de sua publicação.
+⚖️ **Art. 9º** Este Decreto entra em vigor na data de sua publicação.
